# Fake-News-Detection-System

./: .gitignore  LICENSE  README.md  app.py  create_users_db.py  fake_news_model.pkl  feedback.csv  prediction_history.csv  pyproject.toml  requirements.txt  requirements.uv.txt  run.sh  test.ipynb  train_bert_model.py  users.db
model/: logistic_model.pkl  tfidf_vectorizer.pkl
src/: app.py  evaluate_bert_model.py  predict_bert_news.py  predict_news.py  run_feature_extraction.py  train_bert_model.py  train_model.py
templates/: about.html  dashboard.html  game.html  history.html  index.html  index.html.txt  login.html  register.html  visualization.html
